<resources>
    <string name="app_name">Cash Balancer</string>
    <string name="main_title">Main</string>
    <string name="profile_title">Profile</string>
    <string name="add_card">Добавить карту</string>
    <string name="new_account">Новый счёт</string>
    <string name="input_card_name">Введите название</string>
    <string name="input_card_amount">Введите баланс</string>
    <string name="create_card_account">Создать</string>
    <string name="card_color">Оформление</string>
    <string name="select_color">Выбрать цвет</string>
    <string name="main_tab">Главная</string>
    <string name="history_tab">История операций</string>
    <string name="profile_tab">Профиль</string>
    <string name="add_operation">Добавить операцию</string>
    <string name="card_save">Сохранить</string>
    <string name="card_delete">Удалить карту</string>
    <string name="history_period_filter">Период</string>


    <string-array name="account_array">
        <item>Счёт</item>
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
    </string-array>

</resources>